
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pid_t ;
typedef int FILE ;


 int atoi (char*) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fread (char*,int,int,int *) ;
 int sprintf (char*,char*,int) ;
 char* strstr (char*,char*) ;

__attribute__((used)) static int read_voluntary_ctxt_switches(pid_t pid)
{
 char filename[256];
 FILE *fp;
 int vcscnt = -1;

 sprintf(filename, "/proc/self/task/%d/status", pid);
 fp = fopen(filename, "rb");
 if (fp) {
  char filebuf[4096];
  char *pdest;
  fread(filebuf, 1, sizeof filebuf, fp);
  pdest = strstr(filebuf, "voluntary_ctxt_switches");
  vcscnt = atoi(pdest + 0x19);
  fclose(fp);
 }
 return vcscnt;
}
